# churn-intelligence-platform

./: .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
config/: settings.yaml
data/sample/: generator.py  subscriptions_sample.csv
docs/screenshots/: README.md
src/: export.py
src/analytics/: cohort.py  kpis.py
src/config/: constants.py  settings.py
src/feature_engineering/: churn_labels.py  rfm.py
src/forecasting/: base.py  holt_winters.py  pipeline.py  prophet_forecaster.py
src/ingestion/: uploader.py
src/insights/: base.py  factory.py  models.py  template_client.py
src/modeling/: churn_model.py  clv.py  explainability.py  features.py  segmentation.py  validation.py
src/pages/: _cache.py  analytics.py  forecasting.py  insights.py  overview.py  predictions.py  quality.py  upload.py
src/preprocessing/: date_parser.py  schema.py  validator.py
src/utils/: exceptions.py  log.py  types.py
src/visualization/: analytics.py  forecasting.py  insights.py  predictions.py  quality_report.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_churn_labels.py  test_churn_model.py  test_clv.py  test_cohort.py  test_date_parser.py  test_exceptions.py  test_explainability.py  test_export.py  test_features.py  test_forecasting_pipeline.py  test_holt_winters.py  test_kpis.py  test_log.py  test_rfm.py  test_schema.py  test_segmentation.py  test_settings.py  test_template_insights.py  test_temporal_split.py  test_uploader.py  test_validator.py
